# mllam-verification

./: .flake8  .isort.cfg  .pre-commit-config.yaml  README.md  example.yaml  pyproject.toml
.github/workflows/: ci-testing.yml
mllam_verification/: __main__.py  argument_parser.py  array_handling.py  config.py  plot.py  validation.py  verify.py
mllam_verification/operations/: metrics.py  statistics.py
notebooks/: danra_example_usage.ipynb  danra_example_usage.py
tests/unit/: conftest.py  test_plot.py  test_statistics.py
